# crawl4ai-rest-api

./: .dockerignore  .gitignore  API_CREDENTIALS.txt  DEPLOYMENT_LEARNINGS.md  Dockerfile  LOCAL_TESTING_GUIDE.md  POSTMAN_TESTING_GUIDE.md  PUSH_TO_GITHUB.sh  Procfile  README.md  README_REPO.md  pyproject.toml  quick_local_setup.md  railway.json  setup_local_testing.py  start_rest_api.py  test_ai_extraction.py  test_mcp_tools.py  test_results.json
.cursor/rules/: ai-providers.mdc  crawl4ai-patterns.mdc  fastapi-patterns.mdc  railway-deployment.mdc  testing-patterns.mdc
scripts/: deployment_learnings.txt  prd.txt  railway_api_complexity_report.json  railway_scraping_api_prd.txt  task-complexity-report.json
src/: crawl4ai_mcp.py  production_middleware.py  rest_api.py  utils.py
tests/: README.md  __init__.py  comprehensive_test.py  test_rest_api.py
