[project]
name = "crawl4ai-mcp-railway"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents - Railway deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "fastmcp>=2.5.0",
    "supabase==2.15.1",
    "openai==1.71.0",
    "python-dotenv>=1.1.0",
    "uvicorn==0.32.1",
    "fastapi==0.115.6",
    "beautifulsoup4",
    "requests",
    "slowapi==0.1.9",
    "python-json-logger==2.0.7",
    "sentry-sdk[fastapi]==2.18.0",
    "prometheus-client==0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 